[ADDED] Random and seeding to shaders
[ADDED] Emission strength reading
[ADDED] Test Emitter Model

--- a/D3D12HelloTriangle.vcxproj.filters
+++ b/D3D12HelloTriangle.vcxproj.filters
@@ -157,5 +157,8 @@
     <FxCompile Include="Assets\Shaders\ShadowRay.hlsl">
       <Filter>Assets\Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Assets\Shaders\Random.hlsl">
+      <Filter>Assets\Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
