[CHANGED] To inline ray tracing from func shaders

--- a/D3D12HelloTriangle.vcxproj.filters
+++ b/D3D12HelloTriangle.vcxproj.filters
@@ -160,5 +160,8 @@
     <FxCompile Include="Assets\Shaders\Random.hlsl">
       <Filter>Assets\Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Assets\Shaders\InlineRT.hlsl">
+      <Filter>Assets\Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
