--- a/D3D12HelloTriangle.vcxproj.filters
+++ b/D3D12HelloTriangle.vcxproj.filters
@@ -163,5 +163,8 @@
     <FxCompile Include="Assets\Shaders\InlineRT.hlsl">
       <Filter>Assets\Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Assets\Shaders\TestShader.hlsl">
+      <Filter>Assets\Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
